# Operating-systems

./: .gitignore  CMakeLists.txt
lab2/cache-lib/: CMakeLists.txt  test.cpp
lab2/cache-lib/include/: api.h  lru_policy.h
lab2/cache-lib/src/: api.cpp  lru_policy.cpp
lab2/lab1/: .gitignore  CMakeLists.txt
lab2/lab1/inc/: api.h
lab2/lab1/lib/: cache_library.lib
lab2/lab1/src/: CommandExecutor.cpp
lab2/lab1/src/Benchmarks/: Comdined.cpp  IoThptWrite.cpp  Sort.cpp
lab2/lab1/src/Commands/: HistoryCommand.h  LsCommand.h
lab2/lab1/src/TestDir/: TestProc.cpp
lab2/lab1/src/Tests/: run_mult_benchmark.ps1  test_normal.ps1
osi_1/: .gitignore  CMakeLists.txt
osi_1/src/: CommandExecutor.cpp  CommandExecutor.h  Main.cpp  Shell.cpp  Shell.h  TryNt.cpp  ntdll.h
osi_1/src/Benchmarks/: Comdined.cpp  IoThptWrite.cpp
osi_1/src/Commands/: Command.h  MkdirCommand.h
osi_1/src/TestDir/: TestProc.cpp
osi_1/src/Tests/: run_benchmark.ps1  test_mult.ps1
src/: CommandExecutor.cpp  CommandExecutor.h  Main.cpp  Shell.cpp  Shell.h
src/Benchmarks/: IoThptWrite.cpp  Sort.cpp
src/Commands/: CatCommand.h  CdCommand.h  HelpCommand.h  RmCommand.h  TouchCommand.h
src/Tests/: test_normal.ps1
